--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
       <div class="card__buttons">
         <button class="card__icon-button">
-          <svg width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="like-icon" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g class="heart">
               <path class="contour"
                 d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 18H30V21H27V18ZM24 21H27V24H24V21ZM21 24H24V27H21V24ZM21 27H18V30H21V27ZM21 9H18V12H21V9Z"
@@ -73,7 +73,7 @@
               fill="#FF0000" />
           </svg>
         </button>
-        <button class="card__like-button">
+        <button class="button card__like-button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -91,8 +91,7 @@
       </div>
       <div class="card__buttons">
         <button class="card__icon-button">
-          <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
+          <svg class="like-icon" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g class="heart">
               <path class="contour"
                 d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 18H30V21H27V18ZM24 21H27V24H24V21ZM21 24H24V27H21V24ZM21 27H18V30H21V27ZM21 9H18V12H21V9Z"
@@ -109,7 +108,7 @@
               fill="#FF0000" />
           </svg>
         </button>
-        <button class="card__like-button">
+        <button class="button card__like-button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -126,7 +125,7 @@
       </div>
       <div class="card__buttons">
         <button class="card__icon-button">
-          <svg width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="like-icon" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g class="heart">
               <path class="contour"
                 d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 18H30V21H27V18ZM24 21H27V24H24V21ZM21 24H24V27H21V24ZM21 27H18V30H21V27ZM21 9H18V12H21V9Z"
@@ -143,7 +142,7 @@
               fill="#FF0000" />
           </svg>
         </button>
-        <button class="card__like-button">
+        <button class="button card__like-button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -160,7 +159,7 @@
       </div>
       <div class="card__buttons">
         <button class="card__icon-button">
-          <svg width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="like-icon" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g class="heart">
               <path class="contour"
                 d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 18H30V21H27V18ZM24 21H27V24H24V21ZM21 24H24V27H21V24ZM21 27H18V30H21V27ZM21 9H18V12H21V9Z"
@@ -177,7 +176,7 @@
               fill="#FF0000" />
           </svg>
         </button>
-        <button class="card__like-button">
+        <button class="button card__like-button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -195,7 +194,7 @@
       </div>
       <div class="card__buttons">
         <button class="card__icon-button">
-          <svg width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="like-icon" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g class="heart">
               <path class="contour"
                 d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 18H30V21H27V18ZM24 21H27V24H24V21ZM21 24H24V27H21V24ZM21 27H18V30H21V27ZM21 9H18V12H21V9Z"
@@ -212,7 +211,7 @@
               fill="#FF0000" />
           </svg>
         </button>
-        <button class="card__like-button">
+        <button class="button card__like-button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -231,7 +230,7 @@
       </div>
       <div class="card__buttons">
         <button class="card__icon-button">
-          <svg width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="like-icon" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g class="heart">
               <path class="contour"
                 d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 18H30V21H27V18ZM24 21H27V24H24V21ZM21 24H24V27H21V24ZM21 27H18V30H21V27ZM21 9H18V12H21V9Z"
@@ -248,7 +247,7 @@
               fill="#FF0000" />
           </svg>
         </button>
-        <button class="card__like-button">
+        <button class="button card__like-button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -265,7 +264,7 @@
       </div>
       <div class="card__buttons">
         <button class="card__icon-button">
-          <svg width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="like-icon" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g class="heart">
               <path class="contour"
                 d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 18H30V21H27V18ZM24 21H27V24H24V21ZM21 24H24V27H21V24ZM21 27H18V30H21V27ZM21 9H18V12H21V9Z"
@@ -282,7 +281,7 @@
               fill="#FF0000" />
           </svg>
         </button>
-        <button class="card__like-button">
+        <button class="button card__like-button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -300,7 +299,7 @@
       </div>
       <div class="card__buttons">
         <button class="card__icon-button">
-          <svg width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="like-icon" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g class="heart">
               <path class="contour"
                 d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 18H30V21H27V18ZM24 21H27V24H24V21ZM21 24H24V27H21V24ZM21 27H18V30H21V27ZM21 9H18V12H21V9Z"
@@ -317,7 +316,7 @@
               fill="#FF0000" />
           </svg>
         </button>
-        <button class="card__like-button">
+        <button class="button card__like-button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -336,7 +335,7 @@
       </div>
       <div class="card__buttons">
         <button class="card__icon-button">
-          <svg width="39" height="36" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="like-icon" viewBox="0 0 39 36" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g class="heart">
               <path class="contour"
                 d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 18H30V21H27V18ZM24 21H27V24H24V21ZM21 24H24V27H21V24ZM21 27H18V30H21V27ZM21 9H18V12H21V9Z"
@@ -353,20 +352,35 @@
               fill="#FF0000" />
           </svg>
         </button>
-        <button class="card__like-button">
+        <button class="button card__like-button">
           <span class="button__text">Like</span>
         </button>
       </div>
     </article>
   </main>
   <footer class="footer">
-    <button class="footer__button" type="button">
+    <button class="button footer__button" type="button" onclick="window['dialog-id'].showModal()" aria-controls="dialog-id">
       <svg class="footer__image" viewBox="0 0 40 40">
         <use href="./svg/floppy.svg#floppy"></use>
       </svg>
       <span class="button__text">Сохранить на память</span>
     </button>
   </footer>
+
+  <dialog id="dialog-id" class="dialog">
+    <div class="dialog__header">
+      <svg class="dialog__image" viewBox="0 0 40 40">
+        <use href="./svg/floppy.svg#floppy"></use>
+      </svg>
+      <span class="button__text">Вставьте
+        дискету, чтобы продолжить</span>
+      <form>
+    </div>
+    <button class="button__text dialog__button" type="button" onclick="window['dialog-id'].close()">
+      ок
+    </button>
+    </form>
+  </dialog>
   <script src="./scripts/like.js"></script>
 </body>
 
