--- a/index.html
+++ b/index.html
@@ -359,7 +359,8 @@
     </article>
   </main>
   <footer class="footer">
-    <button class="button footer__button" type="button" onclick="window['dialog-id'].showModal()" aria-controls="dialog-id">
+    <button class="button footer__button" type="button" onclick="window['dialog-id'].showModal()"
+      aria-controls="dialog-id">
       <svg class="footer__image" viewBox="0 0 40 40">
         <use href="./svg/floppy.svg#floppy"></use>
       </svg>
@@ -374,8 +375,8 @@
       </svg>
       <span class="button__text">Вставьте
         дискету, чтобы продолжить</span>
-      <form>
     </div>
+    <form class="dialog__form_button" method="dialog">
     <button class="button__text dialog__button" type="button" onclick="window['dialog-id'].close()">
       ок
     </button>
