fix: Адаптивная верстка

--- a/index.html
+++ b/index.html
@@ -325,8 +325,7 @@
     </article>
   </main>
   <footer class="footer">
-    <button class="button footer__button" type="button" onclick="window['dialog-id'].showModal()"
-      aria-controls="dialog-id">
+    <button class="button footer__button" type="button" onclick="window['dialog-id'].show()" aria-controls="dialog-id">
       <svg class="footer__image" viewBox="0 0 40 40">
         <use href="./svg/floppy.svg#floppy"></use>
       </svg>
@@ -343,9 +342,9 @@
         дискету, чтобы продолжить</span>
     </div>
     <form class="dialog__form_button" method="dialog">
-    <button class="button__text dialog__button" type="button" onclick="window['dialog-id'].close()">
-      ок
-    </button>
+      <button class="button__text dialog__button" type="button" onclick="window['dialog-id'].close()">
+        ок
+      </button>
     </form>
   </dialog>
   <script src="./scripts/like.js"></script>
