--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
     </article>
   </main>
   <footer class="footer">
-    <button class="button footer__button" type="button" onclick="window['dialog-id'].show()" aria-controls="dialog-id">
+    <button class="button footer__button" type="button" onclick="window['dialog-id'].showModal()" aria-controls="dialog-id">
       <svg class="footer__image" viewBox="0 0 40 40">
         <use href="./svg/floppy.svg#floppy"></use>
       </svg>
