fix: Ошибки после тестов

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               fill="var(--heart-color)" />
           </svg>
         </button>
-        <button class="button card__like-button button__animated-fill" type="button">
+        <button id="Heart-icon#1" class="button card__like-button button__animated-fill" type="button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -112,7 +112,7 @@
               fill="var(--heart-color)" />
           </svg>
         </button>
-        <button class="button card__like-button button__animated-fill" type="button">
+        <button id="Heart-icon#2" class="button card__like-button button__animated-fill" type="button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -148,7 +148,7 @@
               fill="var(--heart-color)" />
           </svg>
         </button>
-        <button class="button card__like-button button__animated-fill" type="button">
+        <button id="Heart-icon#3" class="button card__like-button button__animated-fill" type="button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -185,7 +185,7 @@
               fill="var(--heart-color)" />
           </svg>
         </button>
-        <button class="button card__like-button button__animated-fill" type="button">
+        <button id="Heart-icon#4" class="button card__like-button button__animated-fill" type="button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -223,7 +223,7 @@
               fill="var(--heart-color)" />
           </svg>
         </button>
-        <button class="button card__like-button button__animated-fill" type="button">
+        <button id="Heart-icon#5" class="button card__like-button button__animated-fill" type="button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -259,7 +259,7 @@
               fill="var(--heart-color)" />
           </svg>
         </button>
-        <button class="button card__like-button button__animated-fill" type="button">
+        <button id="Heart-icon#6" class="button card__like-button button__animated-fill" type="button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -296,7 +296,7 @@
               fill="var(--heart-color)" />
           </svg>
         </button>
-        <button class="button card__like-button button__animated-fill" type="button">
+        <button id="Heart-icon#7" class="button card__like-button button__animated-fill" type="button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -334,7 +334,7 @@
               fill="var(--heart-color)" />
           </svg>
         </button>
-        <button class="button card__like-button button__animated-fill" type="button">
+        <button id="Heart-icon#8" class="button card__like-button button__animated-fill" type="button">
           <span class="button__text">Like</span>
         </button>
       </div>
