--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="card__text">
         <p>Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И,
           возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
-        <p>Место для ваших воспоминаний о начале обучения.</p>
+        <p>Привыкание к расписанию.</p>
       </div>
       <div class="card__buttons">
         <button class="card__icon-button" type="button" aria-labelledby="Heart-icon#1">
@@ -91,7 +91,7 @@
         <p>На первых этапах мы работали со страхами и сомнениями, которые часто испытывают новички. Один из них — страх
           перед чистым листом. Это, конечно же, намного сложнее, чем боязнь куска бумаги. Часто за этим ощущением
           скрываются более глубокие вопросы: с чего начать? а вдруг будет слишком сложно? что, если я не справлюсь?</p>
-        <p>Место для ваших воспоминаний о начале первого спринта.</p>
+        <p>Неуверенность.</p>
       </div>
       <div class="card__buttons">
         <button class="card__icon-button" type="button" aria-labelledby="Heart-icon#2">
@@ -127,7 +127,7 @@
       <div class="card__text">
         <p>Первый проект — позади! Но это всё ещё самое начало пути. Радость могла быстро померкнуть и смениться
           ожиданием провала. Или вы, наоборот, могли вдохновиться успехами и поверить в себя.</p>
-        <p>Место для ваших воспоминаний об окончании первого спринта.</p>
+        <p>Преодоление.</p>
       </div>
       <div class="card__buttons">
         <button class="card__icon-button" type="button" aria-labelledby="Heart-icon#3">
@@ -164,7 +164,7 @@
         <p>На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять, как много ещё впереди. Вы могли
           попытаться погнаться за идеалом и понять, что он недостижим. А, может, вы вовсе и не подвержены перфекционизму
           и вместо того, чтобы сделать идеально, старались просто сделать.</p>
-        <p>Место для ваших воспоминаний о начале второго спринта.</p>
+        <p>Удовлетворение.</p>
       </div>
       <div class="card__buttons">
         <button class="card__icon-button" type="button" aria-labelledby="Heart-icon#4">
@@ -202,7 +202,7 @@
           окружали одногруппники, команда сопровождения и просто близкие люди, которым можно пожаловаться, если
           очередной макет просто так не поддавался. Осваивать что-то новое легче, когда рядом есть единомышленники, не
           правда ли?</p>
-        <p>Место для ваших воспоминаний об окончании второго спринта.</p>
+        <p>Начало уверенности.</p>
       </div>
       <div class="card__buttons">
         <button class="card__icon-button" type="button" aria-labelledby="Heart-icon#5">
@@ -238,7 +238,7 @@
       <div class="card__text">
         <p>На этом курсе вы постоянно решали разные задачи. В какой-то момент вам могло показаться, что решения просто
           иссякли. Значит, пришло время посмотреть на задачу под другим углом.</p>
-        <p>Место для ваших воспоминаний о начале третьего спринта.</p>
+        <p>Нехватка времени.</p>
       </div>
       <div class="card__buttons">
         <button class="card__icon-button" type="button" aria-labelledby="Heart-icon#6">
@@ -275,7 +275,7 @@
         <p>Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. Вроде и проектную пора сдавать, и
           задачи хочется порешать, и в теории получше разобраться, и жизнь не забыть пожить. В такие моменты очень нужна
           концентрация. Вспомните, откуда вы её черпали.</p>
-        <p>Место для ваших воспоминаний об окончании третьего спринта.</p>
+        <p>Красота результата.</p>
       </div>
       <div class="card__buttons">
         <button class="card__icon-button" type="button" aria-labelledby="Heart-icon#7">
@@ -313,7 +313,7 @@
           «красотищу». Во-вторых, с окончанием курса учёба не заканчивается. Вёрстка — это целый мир. И этот мир
           постоянно меняется. Познать его полностью не получится, но это тот случай, когда важен сам процесс познания.
           Ведь часто путь — и есть результат.</p>
-        <p>Место, чтобы остановиться, подумать и написать, что вы чувствуете в этой точке пути.</p>
+        <p>Уверенность и счастье. Благодарность команде и ревьюверам.</p>
       </div>
       <div class="card__buttons">
         <button class="card__icon-button" type="button" aria-labelledby="Heart-icon#8">
