fix: Исправления после код-ревью

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               fill="var(--heart-color)" />
           </svg>
         </button>
-        <button id="Heart-icon#1" class="button card__like-button button__animated-fill" type="button">
+        <button id="Heart-icon#1" class="button card__like-button" type="button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -112,7 +112,7 @@
               fill="var(--heart-color)" />
           </svg>
         </button>
-        <button id="Heart-icon#2" class="button card__like-button button__animated-fill" type="button">
+        <button id="Heart-icon#2" class="button card__like-button" type="button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -148,7 +148,7 @@
               fill="var(--heart-color)" />
           </svg>
         </button>
-        <button id="Heart-icon#3" class="button card__like-button button__animated-fill" type="button">
+        <button id="Heart-icon#3" class="button card__like-button" type="button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -185,7 +185,7 @@
               fill="var(--heart-color)" />
           </svg>
         </button>
-        <button id="Heart-icon#4" class="button card__like-button button__animated-fill" type="button">
+        <button id="Heart-icon#4" class="button card__like-button" type="button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -223,7 +223,7 @@
               fill="var(--heart-color)" />
           </svg>
         </button>
-        <button id="Heart-icon#5" class="button card__like-button button__animated-fill" type="button">
+        <button id="Heart-icon#5" class="button card__like-button" type="button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -259,7 +259,7 @@
               fill="var(--heart-color)" />
           </svg>
         </button>
-        <button id="Heart-icon#6" class="button card__like-button button__animated-fill" type="button">
+        <button id="Heart-icon#6" class="button card__like-button" type="button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -296,7 +296,7 @@
               fill="var(--heart-color)" />
           </svg>
         </button>
-        <button id="Heart-icon#7" class="button card__like-button button__animated-fill" type="button">
+        <button id="Heart-icon#7" class="button card__like-button" type="button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -334,14 +334,14 @@
               fill="var(--heart-color)" />
           </svg>
         </button>
-        <button id="Heart-icon#8" class="button card__like-button button__animated-fill" type="button">
+        <button id="Heart-icon#8" class="button card__like-button" type="button">
           <span class="button__text">Like</span>
         </button>
       </div>
     </article>
   </main>
   <footer class="footer">
-    <button class="button footer__button button__animated-fill" type="button" onclick="window['dialog-id'].showModal()"
+    <button class="button footer__button" type="button" onclick="window['dialog-id'].showModal()"
       aria-controls="dialog-id">
       <svg class="footer__image" viewBox="0 0 40 40">
         <use href="./svg/floppy.svg#floppy"></use>
@@ -359,7 +359,7 @@
         дискету, чтобы продолжить</span>
     </div>
     <form class="dialog__form_button" method="dialog">
-      <button class="button dialog__button button__animated-fill" type="button" onclick="window['dialog-id'].close()">
+      <button class="button dialog__button" type="button" onclick="window['dialog-id'].close()">
         <span class="button__text">ок</span>
       </button>
     </form>
